# sonar

./: .buildinfo  .dockerignore  .editorconfig  .github_changelog_generator  .gitignore  .travis.yml  AUTHORS.rst  CHANGELOG.md  CHANGES.rst  CONTRIBUTING.rst  Dockerfile  Dockerfile.base  INSTALL.rst  LICENSE  MANIFEST.in  Pipfile  README.md  README.rst  SECURITY.rst  api.html  authors.html  babel.ini  changes.html  configuration.html  contributing.html  docker-compose.full.yml  docker-compose.yml  docker-services.yml  genindex.html  index.html  installation.html  license.html  objects.inv  pyproject.toml  pytest.ini  requirements-devel.txt  run-tests.sh  search.html  searchindex.js  setup.cfg  (+3 more)
.doctrees/: api.doctree  authors.doctree  changes.doctree  configuration.doctree  contributing.doctree  environment.pickle  index.doctree  installation.doctree  license.doctree  usage.doctree
.github/ISSUE_TEMPLATE/: bug_report.md  developers.md  question.md
.github/workflows/: continuous-integration-test.yml  stale.yml
.tx/: config
_sources/: api.rst.txt  authors.rst.txt  changes.rst.txt  configuration.rst.txt  contributing.rst.txt  index.rst.txt  installation.rst.txt
_static/: alabaster.css
cli/: fixtures.py
data/: affiliations.csv  authors.json  complete_document_sample.json  documents.json  institutions.json  oai_sources.json  organisations.json  records.json  rerodoc_files_permissions.csv  rerodoc_oai_sources.json  users.json
data/documents/: data.json
data/heg/: .gitignore
data/idp_certificates/: eduid.crt  eduidtest.crt  idp.crt
data/organisations/: data.json
data/users/: data.json
docker/: build-images.sh  wait-for-services.sh
docker/haproxy/: Dockerfile  haproxy.cfg  haproxy_cert.pem
docker/nginx/: Dockerfile  nginx.conf  sp.key  sp.pem  test.crt  test.key
docker/nginx/conf.d/: default.conf
docker/postgres/: Dockerfile  init-app-db.sh
docker/uwsgi/: uwsgi_rest.ini  uwsgi_ui.ini
docs/: Makefile  api.rst  authors.rst  changes.rst  conf.py  configuration.rst  contributing.rst  index.rst  installation.rst  make.bat  usage.rst
scripts/: bootstrap  console  export  export-heg  fixtures  functions  install-ui  server  setup  test  update
sonar/: __init__.py  bundles.py  celery.py  config.py  config_sonar.py  ext.py  filters.py  proxies.py  route_converters.py  signals.py  stats_event_builders.py  utils.py  version.py
sonar/affiliations/: __init__.py  affiliation_resolver.py
sonar/alembic/: 3d3309f660e4_init.py  e1eb7549728f_replace_document_type_field_in_documents.py
sonar/common/jsonschemas/: __init__.py  classification-v1.0.0.json  identifiedby-v1.0.0.json  interface_language-v1.0.0.json  language-v1.0.0.json  license-v1.0.0.json  masked-v1.0.0.json  oa-status-v1.0.0.json  type-v1.0.0.json
sonar/dedicated/: __init__.py  views.py
sonar/elasticsearch/: __init__.py  cli.py
sonar/es_templates/: __init__.py
sonar/es_templates/v6/: __init__.py
sonar/es_templates/v7/: __init__.py  record.json
sonar/heg/: __init__.py
sonar/heg/cli/: __init__.py  harvest.py
sonar/heg/ftp/: __init__.py
sonar/heg/record/: __init__.py
sonar/heg/serializers/: __init__.py
sonar/help/: __init__.py  views.py
sonar/json_schemas/: deposits_json_schema.py  documents_json_schema.py  factory.py  json_schema_base.py  organisations_json_schema.py  projects_json_schema.py  users_json_schema.py
sonar/jsonschemas/: __init__.py  deposits_json_schema.py  documents_json_schema.py  factory.py  json_schema_base.py  organisations_json_schema.py  projects_json_schema.py  users_json_schema.py  utils.py
sonar/jsonschemas/common/: __init__.py  interface_language-v1.0.0.json  license-v1.0.0.json  masked-v1.0.0.json  oa-status-v1.0.0.json  type-v1.0.0.json  validation-v1.0.0.json
sonar/modules/: __init__.py  api.py  babel_extractors.py  cli.py  config.py  ext.py  fetchers.py  minters.py  permissions.py  providers.py  query.py  receivers.py  serializers.py  utils.py
sonar/modules/ark/: __init__.py  api.py  cli.py  views.py
sonar/modules/authors/: api.py  ext.py  fetchers.py  jsonresolvers.py  minters.py  providers.py
sonar/modules/cli/: __init__.py  fixtures.py  imports.py  utils.py
sonar/modules/collections/: __init__.py  api.py  config.py  jsonresolvers.py  minters.py  permissions.py  query.py  receivers.py  schemas.py  views.py
sonar/modules/deposits/: __init__.py  api.py  cli.py  permissions.py  query.py  rest.py  utils.py
sonar/modules/documents/: __init__.py  api.py  cli.py  config.py  dnb.py  dumpers.py  ext.py  extensions.py  fetchers.py  jsonresolvers.py  minters.py  models.py  oaipmh_utils.py  permissions.py  providers.py  query.py  receivers.py  rest.py  tasks.py  urn.py  utils.py  views.py
sonar/modules/institutions/: __init__.py  api.py  cli.py  ext.py  jsonresolvers.py
sonar/modules/oauth/: __init__.py  orcid.py
sonar/modules/organisations/: __init__.py  api.py  ext.py  jsonresolvers.py  minters.py  permissions.py  query.py  utils.py
sonar/modules/pdf_extractor/: __init__.py  config.py  ext.py  pdf_extractor.py  utils.py
sonar/modules/projects/: __init__.py  api.py  jsonresolvers.py  (+2 more)
sonar/monitoring/: __init__.py
sonar/records/: __init__.py  config.py  ext.py  views.py
sonar/resources/: api.py  cli.py  params.py  resource.py  service.py
sonar/snl/: __init__.py
sonar/suggestions/: __init__.py  rest.py
sonar/theme/: __init__.py  api_views.py  views.py  webpack.py
sonar/translations/: manual_translations.txt  messages.pot  rest.py
sonar/webdav/: __init__.py  heg_client.py
tests/: __init__.py  conftest.py  test_version.py  utils.py
tests/api/: __init__.py  conftest.py  test_api_query.py  test_api_simple_flow.py  test_ext_before_request.py  test_receivers.py
tests/data/: babel_extraction.json
tests/e2e/: conftest.py  test_front_page.py
tests/ui/: __init__.py  conftest.py  test_api.py  test_api_views.py  test_babel_extractors.py  test_cli.py  test_ext.py  test_fetchers.py  test_permissions.py  test_query.py  test_utils.py  test_views.py
tests/unit/: __init__.py  conftest.py  test_sonar_ext.py  test_sonar_proxy.py
(+546 files in other folders)
